# docreview

./: .replit  app.py  compliance_analyzer.py  gunicorn_config.py  models.py  pdf_generator.py  pdf_processor.py  pyproject.toml  replit.md  replit_auth.py  routes.py  start_server.sh
attached_assets/: Pasted--2025-09-01-21-02-26-0000-18659-CRITICAL-WORKER-TIMEOUT-pid-18670-2025-09-01-21-02-26-0000-1756760576782_1756760576782.txt  Pasted--conducting-a-technical-review-of-product-specifications-for-compliance-with-pro-INFO-root-STEP-7--1756760061665_1756760061666.txt  Pasted-05-x00a-x00-x00a-x009-x00b-x004-x00f-x00b-x004-x00c-x004-x00e-x009-x00c-PageUIDList-0-5640-1756752079502_1756752079502.txt  Pasted-Here-s-a-single-drop-in-system-prompt-you-can-paste-into-Replit-or-any-OpenAI-API-app-It-tel-1756749433745_1756749433745.txt  Pasted-INFO-root-STEP-7-Making-HTTP-request-2025-09-01-20-51-35-0000-16204-CRITICAL-WORKER-TIME-1756759916272_1756759916273.txt  Pasted-INFO-root-STEP-7-Making-HTTP-request-2025-09-01-20-57-16-0000-17526-CRITICAL-WORKER-TIME-1756760260301_1756760260301.txt  Pasted-Looking-at-your-code-you-ve-done-an-excellent-job-handling-encoding-issues-Your-implementation-is--1756756122057_1756756122057.txt  Pasted-The-error-is-occurring-at-the-HTTP-request-level-and-the-position-11-suggests-it-s-likely-in-the--1756756997100_1756756997100.txt  Pasted-This-is-a-timeout-error-not-an-encoding-issue-The-worker-process-is-being-killed-by-Gunicorn-b-1756759705701_1756759705701.txt  (+3 more)
templates/: 403.html  base.html  history.html  index.html  landing.html  results.html
(+3 files in other folders)
